# v4r_gazebo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cheatsheet.txt  package.xml
cfg/rviz/: gazebo_urdf.rviz  generic.rviz  mapping.rviz  pioneer3dx.rviz
include/v4r_gazebo/: PubQueue.h  v4r_gazebo_ros_diff_drive.h  v4r_gazebo_ros_joint_state_publisher.h  v4r_gazebo_ros_laser.h
launch/: all.launch  gazebo.rviz  gazebo_env_aula_HD.launch  gazebo_env_empty.launch  gazebo_env_gh25.launch  gazebo_env_hbf.launch  gazebo_env_simple.launch  load_map.launch  local.launch  map.pgm  pioneer3dx.gazebo.launch  pioneer3dx.urdf.launch  remot.launch  reset_robot.launch  room_gh25.launch  room_hbf.launch  room_simple.launch  spawn_robot.launch  spawn_room.launch  world.launch
maps/: aula_HD_sloppy.pgm  floragasse.pgm  floragasse.yaml  gh25.pgm  guszhaus25_map.pgm  hbf_lvl0.map.yaml  hbf_lvl0_map.pgm  recorded_map.yaml  retouched_map.pgm  retouched_map.yaml
models/: database.config
models/room/: model.sdf
models/room_aula_HD/: model.config  model.sdf
models/room_floragasse/: model.config  model.sdf
models/room_gh25/: model.sdf
models/room_guszhausstrasze/: model.config  model.sdf
models/room_guszhausstrasze/meshes/: gußhausstraße25_visual.dae
models/room_hbf/: model.config  model.sdf
models/room_hbf_lvl0/: model.config  model.sdf
models/room_hbf_lvl0/meshes/: collision.dae  visual.dae
models/room_hbf_lvl0/sketchup/: Level0-d-new-coll.skb  Level0-d-new-coll.skp  Level0-d-new.skb  Level0-d-new.skp  Level0-d-new_floor_complete.skp  Level0-d-new_floor_complete_offset.skp  Level0-d-new_floor_complete_walls.skp  Level0-d-new_floor_raw.skp
models/room_simple/: model.config
models/tag0001/: model.config  model.sdf
models/tag0001/materials/scripts/: Gazebo.material
src/: gazebo_ros_diff_drive.cpp  gazebo_ros_joint_state_publisher.cpp  gazebo_ros_laser.cpp  joint_publisher.cpp  v4r_gazebo_ros_diff_drive.cpp  v4r_gazebo_ros_joint_state_publisher.cpp  v4r_gazebo_ros_laser.cpp
worlds/: aula.world  simple.world
xacro/: camera.xacro  hokuyo.xacro  pioneer3dx.xacro  pioneer3dx_body.xacro
